--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
       <div class="portfolio-grid">
         
         <div class="card" data-category="landing">
-          <div class="card-img"><video autoplay loop muted playsinline><source src="assets/videos/ugc1-demo.gif" type="img/gif"></video></div>
+          <div class="card-img"><img src="assets/videos/ugc1-demo.gif" loading="lazy" type="img/gif"/></div>
           <div class="card-content">
             <h3 data-fr="UGC Maroc Landing" data-ar="صفحة هبوط UGC المغرب">UGC Maroc Landing</h3>
             
